google drive in progress

--- a/index.html
+++ b/index.html
@@ -10,13 +10,18 @@
             src="https://code.jquery.com/jquery-3.3.1.min.js"
             integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
             crossorigin="anonymous"></script>
+        
+        <script src="https://apis.google.com/js/client.js"></script>
         <script type="text/javascript" src="./outputLog.js"></script>
+        
     </head>
     <body>
         <h1>Demo</h1>
         <div id="contents_sample_wrap">
             <p>コンソールを開いてボタンを押すとサンプルログを確認できます。</p>
             <input type="button" value="サンプルログを出す" id="log-button" />
+            <input type="button" value="save" id="saveBtn" />
+            <input type="button" value="auth" id="authorizeButton" />
             <br><br><br>
         </div>
         <h1>How To Use</h1>
